--- a/_layout/masthead.html
+++ b/_layout/masthead.html
@@ -4,9 +4,11 @@
       <nav id="site-nav" class="greedy-nav">
         <a class="site-title" href="/">Origin</a>
         <ul class="visible-links">
-          <li class="masthead__menu-item"><a href="/cv/" >Short CV</a></li>
+
+          <li class="masthead__menu-item"><a href="/cv/" >CV</a></li>
           <li class="masthead__menu-item"><a href="/publications/" >Publications</a></li>
           <li class="masthead__menu-item"><a href="/talks/" >Talks</a></li>
+      
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">Toggle menu</span>
