make buttons better

--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -9,31 +9,33 @@
           </div>
           <div class="author__content">
             <h3 class="author__name" itemprop="name">Filip Tronarp</h3>
-            <p class="author__bio" itemprop="description"> <strong>Assistant Professor</strong></p>
+            <p class="author__bio" itemprop="description"> <strong>Assistant Professor <br> Lund University  </strong></p>
           </div>
             
           <div class="author__urls-wrapper">
          
-            <!--
+            
             <button class="btn btn--inverse">Follow</button>
-            -->
+            
+            
             <ul class="author__urls social-icons">
    
               <div class="author__urls-wrapper">
 
                 <li>
-                <a href="https://www.google.com/maps/place/Centre+for+Mathematical+Sciences+-+Lund+University/@55.7107709,13.2041258,17z/data=!3m1!4b1!4m6!3m5!1s0x465397cbdba83233:0x24a9d84e7d2b453d!8m2!3d55.7107679!4d13.2067007!16s%2Fg%2F11dyjjr8s", title=location>
+                <a href="https://www.google.com/maps/place/Centre+for+Mathematical+Sciences+-+Lund+University/@55.7107709,13.2041258,17z/data=!3m1!4b1!4m6!3m5!1s0x465397cbdba83233:0x24a9d84e7d2b453d!8m2!3d55.7107679!4d13.2067007!16s%2Fg%2F11dyjjr8s" title="location" style="display: inline-block;">
                 &nbsp;&nbsp;
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-map-pin">
                   <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle>
                 </svg>
+                
             </a> 
             </li>
            
             <li>
-              <a href="https://scholar.google.com/citations?user=q0rtB0EAAAAJ&hl=en" rel="nofollow noopener noreferrer">
+              <a href="https://scholar.google.com/citations?user=q0rtB0EAAAAJ&hl=en" title="google scholar" style="display: inline-block;">
                 &nbsp;&nbsp;
-                  <svg rxmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
+                  <svg rxmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
                       <title>google scholar</title>
                       <path d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z"/>
                   </svg>
@@ -41,18 +43,18 @@
             </li>
   
             <li>
-              <a href="https://github.com/filtron" title=github>
+              <a href="https://github.com/filtron" title=github style="display: inline-block;">
                 &nbsp;&nbsp;
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                 </svg>
               </a>
             </li>
   
             <li>
-              <a href="https://www.linkedin.com/in/filip-tronarp-93097065/" title=linkedin>
+              <a href="https://www.linkedin.com/in/filip-tronarp-93097065/" title=linkedin style="display: inline-block;">
                 &nbsp;&nbsp;
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
                   <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                   <rect x=2 y=9 width=4 height=12></rect>
                   <circle cx=4 cy=4 r=2></circle>
@@ -62,9 +64,9 @@
           </li>
 
             <li>
-             <a href="mailto:filip.tronarp@matstat.lu.se" title=email>
+             <a href="mailto:filip.tronarp@matstat.lu.se" title=email style="display: inline-block;">
               &nbsp;&nbsp;
-               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
+               <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
                  <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                  <polyline points="22,6 12,13 2,6"></polyline>
                </svg>
