--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -334,3 +334,39 @@ code {
   border-radius: 0 10px 10px 0;
   border-left: 5px solid #4c9cf1;
 }
+
+
+/* ==================================================================
+    DARKMODE STYLING
+================================================================== */
+
+/*
+.darkmode--activated p,
+.darkmode--activated h1,
+.darkmode--activated h2,
+.darkmode--activated h3,
+.darkmode--activated h4,
+.darkmode--activated h5,
+.darkmode--activated span,
+.darkmode--activated li,
+.darkmode--activated nav,
+.darkmode--activated ol {
+    color: #ECEFF4;
+}
+
+.darkmode--activated blockquote {
+    background-color: #2E3440;
+}
+
+.darkmode--activated ul {
+    background-color: #2E3440;
+}
+
+.darkmode--activated a {
+    color: #2E3440
+}
+
+.darkmode-toggle {
+    z-index: 500;
+}
+*/
