--- a/_layout/head.html
+++ b/_layout/head.html
@@ -14,6 +14,31 @@
   {{insert style.html}}
   {{isdef title}} <title>{{fill title}}</title>  {{end}}
   <!-- end custom head snippets -->
+
+  <!--
+  <script src="/libs/darkmode/darkmode-js.min.js"></script>
+  <script>
+      function addDarkmodeWidget()
+      {
+          const options = {
+              bottom: '32px', /* default: '32px' */
+              right: '32px', /* default: '32px' */
+              left: 'unset', /* default: 'unset' */
+              time: '.0s', /* default: '0.3s' */
+              mixColor: '#fff', /* default: '#fff' */
+              backgroundColor: '#fff', /* default: '#fff' */
+              buttonColorDark: '#100f2c', /* default: '#100f2c' */
+              buttonColorLight: '#fff', /* default: '#fff' */
+              saveInCookies: true, /* default: true, */
+              label: '🌓', /* default: '' */
+              autoMatchOsTheme: true /* default: true */
+          };
+          new Darkmode(options).showWidget();
+      };
+      window.addEventListener('DOMContentLoaded', addDarkmodeWidget);
+  </script>
+-->
+
 </head>
 {{insert body_layout.html}}
 
