--- a/_layout/masthead.html
+++ b/_layout/masthead.html
@@ -2,8 +2,21 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="/">Origin</a>
 
+
+        <a class="site-title" href="/">Origin
+
+        </a>
+
+<!--
+        <a href="https://scholar.google.com/citations?user=q0rtB0EAAAAJ&hl=en" title="google scholar" style="display: inline-block;">
+          &nbsp;&nbsp;
+            <svg rxmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill=none stroke=currentColor stroke-width=2 stroke-linecap=round stroke-linejoin=round>
+                <title>google scholar</title>
+                <path d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z"/>
+            </svg>
+        </a>
+-->
         <ul class="visible-links">
 
           <li class="masthead__menu-item"><a href="/cv/" >CV</a></li>
