--- a/_layout/masthead.html
+++ b/_layout/masthead.html
@@ -22,7 +22,9 @@
           <li class="masthead__menu-item"><a href="/cv/" >CV</a></li>
           <li class="masthead__menu-item"><a href="/publications/" >Publications</a></li>
           <li class="masthead__menu-item"><a href="/talks/" >Talks</a></li>
-      
+          <!--
+          <li class="masthead__menu-item"><a href="/blog/" >Blog</a></li>
+      -->
         </ul>
         <button class="greedy-nav__toggle hidden" type="button">
           <span class="visually-hidden">Toggle menu</span>
