--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -15,7 +15,7 @@
           <div class="author__urls-wrapper">
          
             
-            <button class="btn btn--inverse">Follow</button>
+            <button class="btn btn--inverse">Find me</button>
             
             
             <ul class="author__urls social-icons">
