--- a/_layout/body_layout.html
+++ b/_layout/body_layout.html
@@ -9,7 +9,7 @@
           </div>
           <div class="author__content">
             <h3 class="author__name" itemprop="name">Filip Tronarp</h3>
-            <p class="author__bio" itemprop="description"> <strong>Assistant Professor <br> Lund University  </strong></p>
+            <p class="author__bio" itemprop="description"> <strong>Associate Senior Lecturer  <br> Lund University   </strong></p>
           </div>
             
           <div class="author__urls-wrapper">
